raffia/tests/error/at-rule/starting-style/prelude.snap
---
source: raffia/tests/error.rs
---
error: expect token `{`, but found `<ident>`
  ┌─ prelude.css:1:17
  │
1 │ @starting-style invalid {
  │                 ^^^^^^^


